--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<h1>Hola Mundo</h1>
+<!--<h1>Hola Mundo</h1>
 <hr>
 <app-heroe></app-heroe>
 <app-list-heroes></app-list-heroes>
+<app-dbz-main-page></app-dbz-main-page>-->
+
+<app-login></app-login>
+
